[workspace]
members = [
]

[package]
name = "gssapi-rs"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "gssapi_rs"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[dependencies]
c2rust-bitfields = "0.3"
c2rust-asm-casts = "0.1"
libc = "0.2"



